[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["WavMarkTest"]
[project]
name = "WavMarkTest"
version = "0.0.3"
authors = [
    { name = "Ravindi Ratnayake", email = "rrat0007@student.monash.edu" },
]
description = "FIT3164 Audio Watermarking Tool"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm", "librosa", "resampy", "huggingface_hub",
    "torch",
    "torchaudio",
]

[project.urls]
"Homepage" = "https://github.com/ravindi-r/wavmark-test"
"Bug Tracker" = "https://github.com/ravindi-r/wavmark-test/issues"
